--- a/tsconfig.app.json
+++ b/tsconfig.app.json
@@ -5,6 +5,7 @@
     "module": "ESNext",
     "moduleResolution": "bundler",
     "allowImportingTsExtensions": true,
+    "types": ["vite/client", "node"],
     "verbatimModuleSyntax": true,
     "jsx": "react-jsx",
     "strict": true,
