--- a/server/package.json
+++ b/server/package.json
@@ -12,10 +12,12 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "@prisma/client": "^6.11.1",
     "cors": "^2.8.5",
     "dotenv": "^17.2.0",
     "express": "^5.1.0",
-    "openai": "^5.9.0"
+    "openai": "^5.9.0",
+    "prisma": "^6.11.1"
   },
   "devDependencies": {
     "@types/cors": "^2.8.19",
